samples/_failures_safe/1761002432_6534e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e001d4f7.c: In function ‘main’:
./samples/SAFE/__tmp_e001d4f7.c:182:33: error: expected ‘)’ at end of input
  182 |         switch (sm.current_state
      |                ~                ^
      |                                 )
./samples/SAFE/__tmp_e001d4f7.c:182:9: error: expected declaration or statement at end of input
  182 |         switch (sm.current_state
      |         ^~~~~~
./samples/SAFE/__tmp_e001d4f7.c:182:9: error: expected declaration or statement at end of input
